src/passes/snapshots/lumina2__passes__ast_gen__test__trait_declaration_single.snap
---
source: src/passes/ast_gen.rs
expression: "trait MyTrait { fn something(); }"
---
Trait {
    name: StringId(
        1,
    ),
    methods: {
        StringId(
            0,
        ): FunctionSignature {
            name: StringId(
                0,
            ),
            parameters: [],
            return_ty: None,
        },
    },
}
