src/passes/snapshots/lumina2__passes__ast_gen__test__trait_implementation_empty.snap
---
source: src/passes/ast_gen.rs
expression: "impl MyTrait for MyType {}"
---
TraitImplementation {
    annotations: [],
    trait_name: StringId(
        1,
    ),
    target_ty: AstTypeId(
        0,
    ),
    methods: {},
}
