src/passes/snapshots/lumina2__passes__ast_gen__test__trait_implementation_multiple.snap
---
source: src/passes/ast_gen.rs
expression: "impl MyTrait for MyType { fn something(n: u8) {} fn another() -> bool { true } }"
---
TraitImplementation {
    trait_name: StringId(
        6,
    ),
    target_ty: AstTypeId(
        2,
    ),
    methods: {
        StringId(
            0,
        ): FunctionId(
            0,
        ),
        StringId(
            3,
        ): FunctionId(
            1,
        ),
    },
}
