src/passes/snapshots/lumina2__passes__ast_gen__test__trait_implementation_single.snap
---
source: src/passes/ast_gen.rs
expression: "impl MyTrait for MyType { fn something() {} }"
---
TraitImplementation {
    trait_name: StringId(
        2,
    ),
    target_ty: AstTypeId(
        0,
    ),
    methods: {
        StringId(
            0,
        ): FunctionId(
            0,
        ),
    },
}
