src/passes/snapshots/lumina2__passes__ast_gen__test__tuple_empty.snap
---
source: src/passes/ast_gen.rs
expression: ()
---
Tuple(
    Tuple {
        values: [],
    },
)
