src/passes/snapshots/lumina2__passes__ast_gen__test__tuple_many.snap
---
source: src/passes/ast_gen.rs
expression: "(1, true, 3)"
---
Expression {
    id: AstId(
        3,
    ),
    kind: Tuple(
        Tuple {
            values: [
                ExpressionId(
                    0,
                ),
                ExpressionId(
                    1,
                ),
                ExpressionId(
                    2,
                ),
            ],
        },
    ),
}
