src/passes/snapshots/lumina2__passes__ast_gen__test__tuple_nested.snap
---
source: src/passes/ast_gen.rs
expression: "(1, (2, true), 4)"
---
Expression {
    id: AstId(
        5,
    ),
    kind: Tuple(
        Tuple {
            values: [
                ExpressionId(
                    0,
                ),
                ExpressionId(
                    3,
                ),
                ExpressionId(
                    4,
                ),
            ],
        },
    ),
}
