src/passes/snapshots/lumina2__passes__ast_gen__test__tuple_single.snap
---
source: src/passes/ast_gen.rs
expression: "(1,)"
---
Tuple(
    Tuple {
        values: [
            ExpressionId(
                0,
            ),
        ],
    },
)
