src/passes/snapshots/lumina2__passes__ast_gen__test__unary_minus.snap
---
source: src/passes/ast_gen.rs
expression: "-1"
---
Unary(
    Unary {
        operation: Negative,
        value: ExpressionId(
            0,
        ),
    },
)
