src/passes/snapshots/lumina2__passes__ast_gen__test__unary_not.snap
---
source: src/passes/ast_gen.rs
expression: "!true"
---
Unary(
    Unary {
        op: Not(
            Bang,
        ),
        value: ExprId(
            0,
        ),
    },
)
