src/passes/snapshots/lumina2__passes__ast_gen__test__variable_simple.snap
---
source: src/passes/ast_gen.rs
expression: some_ident
---
Variable(
    Variable {
        variable: StringId(
            0,
        ),
    },
)
